--- a/vue3/package.json
+++ b/vue3/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^3.2.11",
     "element-plus": "^2.2.15",
     "pinia": "^2.0.23",
+    "unplugin-vue-define-options": "^0.12.0",
     "vant": "^3.6.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
