--- a/vue3/package.json
+++ b/vue3/package.json
@@ -25,5 +25,8 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
-  }
+  },
+  "engines" : { 
+    "node" : ">=14.17.3" 
+  } 
 }
