--- a/vue3/package.json
+++ b/vue3/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "ant-design-vue": "^3.2.11",
     "element-plus": "^2.2.15",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.23",
     "unplugin-vue-define-options": "^0.12.0",
     "vant": "^3.6.1",
@@ -26,7 +27,7 @@
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
   },
-  "engines" : { 
-    "node" : ">=14.17.3" 
-  } 
+  "engines": {
+    "node": ">=14.17.3"
+  }
 }
