--- a/vue3/tsconfig.json
+++ b/vue3/tsconfig.json
@@ -20,6 +20,9 @@
         "src/*"
       ]
     },
+    "types": [
+      "unplugin-vue-define-options/macros-global"
+    ]
   },
   "include": [
     "src/**/*.ts",
